Fix onhover shifting issues in proxy, fix dropdown circle

--- a/client/src/styles/pagescarousel/PagesCarouselDirectionButton.css
+++ b/client/src/styles/pagescarousel/PagesCarouselDirectionButton.css
@@ -1,3 +1,9 @@
+.pagedirectionbuttoncontainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .pagedirectionbutton {
   display: flex;
   align-items: center;
@@ -13,7 +19,6 @@
 .pagedirectionbutton:hover {
   cursor: pointer;
   border: solid rgb(220,20,60) 2px;
-  margin: -1px 9px -1px 9px;
 }
 
 .changereviewspagebutton {
