--- a/client/src/styles/summary/LovedFor.css
+++ b/client/src/styles/summary/LovedFor.css
@@ -26,7 +26,9 @@
 }
 
 .bestrestaurantscontainer {
-  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  margin: 15px 0px 15px 0px;
 }
 
 .bestrestaurants {
